Corrections in alignement of Buttons text on Mobile

--- a/src/WeatherTemperature.css
+++ b/src/WeatherTemperature.css
@@ -1,7 +1,10 @@
 button {
   font-size: 25px;
-  text-align: right !important;
   color: black;
+}
+
+.celsiusFahrenheit {
+  text-align: right;
 }
 
 .celsiusFahrenheit {
